Add package keywords.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "main": "./lib/autocomplete-jsdoc",
   "version": "0.0.1",
   "description": "Offers suggestions for JSDoc keywords.",
-  "keywords": [],
+  "keywords": [
+    "autocomplete",
+    "autocomplete-plus",
+    "jsdoc",
+    "javascript"
+  ],
   "repository": "https://github.com/savetheclocktower/atom-autocomplete-jsdoc",
   "license": "MIT",
   "engines": {
